Fix login page on mobile

--- a/client/app/login/login.component.scss
+++ b/client/app/login/login.component.scss
@@ -34,6 +34,10 @@
       z-index: 10;
       display: inline-block;
     }
+
+    @media (max-width: $screen-xs-max) {
+      max-width: 340px;
+    }
   }
 
   .lb-header {
